[package]
name = "zanahoria-vision"
version = "0.1.0"
edition = "2024"

[dependencies]
swayipc = "4.0.0"
tokio = { version = "1", default-features = false, features = ["macros", "rt-multi-thread", "time", "sync", "io-util"] }
nvim-rs = { version = "0.7", features = ["use_tokio"] }
async-trait = "0.1.89"
parity-tokio-ipc = "0.9.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.5", features = ["derive"] }
